# ocean-infrastructure-intelligence-platform

./: .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 1edb5a9cb6ea_create_site_table.py  781ee002b5cd_add_index_to_country_code_in_site_model.py  b3ba8de944d4_extend_site_model_with_status_and_.py
backend/: main.py
backend/app/: main.py
backend/app/analytics/: ai_compute.py  bathymetry.py  models.py  orchestrator.py  otec.py  site_scoring.py
backend/app/api/: site.py
backend/app/application/dtos/: site.py
backend/app/application/mappers/: ocean_observation_mapper.py  site.py
backend/app/core/: config.py  constants.py  database.py
backend/app/data/: providers.py
backend/app/domain/: base.py  exceptions.py
backend/app/infrastructure/: database.py  gis.py
backend/app/models/: __init__.py  site.py
backend/app/providers/: base.py  thailand_provider.py
backend/app/schemas/: __init__.py  site.py
docs/architecture/: api.md  deployment.md  erd.md  project-intelligence-model.md  system-overview.md
docs/datasets/: climate.md  economics.md  infrastructure.md  ocean.md  policy.md
docs/decisions/: ADR-0001-project-centric-model.md
docs/product/: glossary.md  project-intelligence-model.md  project-lifecycle.md  scoring-model.md  stakeholders.md  use-cases.md  vision.md
infrastructure/docker/: Dockerfile  docker-compose.yml
(+5 files in other folders)
